come fixes for release

--- a/StudentInternshipManagement/Areas/Admin/Views/Admin/Index.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/Admin/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Kendo.Mvc.UI
 @using Models
 @{
-    ViewBag.Title = "Quản lý Admin";
-    ViewBag.Category = "Quản lý";
+    ViewBag.Title = "Management / Admin";
+    ViewBag.Category = "Manage";
     ViewBag.Section = "Admin";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
