--- a/StudentInternshipManagement/Areas/Admin/Views/Company/Index.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/Company/Index.cshtml
@@ -2,9 +2,9 @@
 @using Models
 @using Services
 @{
-    ViewBag.Title = "Quản lý công ty";
-    ViewBag.Category = "Quản lý";
-    ViewBag.Section = "Công ty";
+    ViewBag.Title = "Company management";
+    ViewBag.Category = "Manage";
+    ViewBag.Section = "Company";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
