--- a/StudentInternshipManagement/Areas/Admin/Views/CompanyTrainingMajor/Index.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/CompanyTrainingMajor/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Kendo.Mvc.UI
 @using Models
 @{
-    ViewBag.Title = "Quản lý định hướng thực tập của công ty";
-    ViewBag.Category = "Quản lý";
-    ViewBag.Section = "Định hướng thực tập của công ty";
+    ViewBag.Title = "Managing the company's internship orientation";
+    ViewBag.Category = "Manage";
+    ViewBag.Section = "Company's internship orientation ";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
