--- a/StudentInternshipManagement/Areas/Admin/Views/Department/Index.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/Department/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Kendo.Mvc.UI
 @using Models
 @{
-    ViewBag.Title = "Quản lý Khoa/Viện";
-    ViewBag.Category = "Quản lý";
-    ViewBag.Section = "Khoa/Viện";
+    ViewBag.Title = "Faculty/Institute Manager";
+    ViewBag.Category = "Manage";
+    ViewBag.Section = "Faculty/Institute";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
