--- a/StudentInternshipManagement/Areas/Admin/Views/LearningClass/Index.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/LearningClass/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Kendo.Mvc.UI
 @using Models
 @{
-    ViewBag.Title = "Quản lý sinh viên";
-    ViewBag.Category = "Quản lý";
-    ViewBag.Section = "Sinh viên";
+    ViewBag.Title = "Student Management";
+    ViewBag.Category = "Manage";
+    ViewBag.Section = "Student";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
