--- a/StudentInternshipManagement/Areas/Admin/Views/News/Index.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/News/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Kendo.Mvc.UI
 @using Models
 @{
-    ViewBag.Title = "Quản lý tin tức";
-    ViewBag.Category = "Quản lý";
-    ViewBag.Section = "Tin tức";
+    ViewBag.Title = "News management";
+    ViewBag.Category = "Manage";
+    ViewBag.Section = "News";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
