--- a/StudentInternshipManagement/Areas/Admin/Views/Semester/Index.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/Semester/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Kendo.Mvc.UI
 @using Models
 @{
-    ViewBag.Title = "Quản lý học kỳ";
-    ViewBag.Category = "Quản lý";
-    ViewBag.Section = "Học kỳ";
+    ViewBag.Title = "Semester Management";
+    ViewBag.Category = "Manage";
+    ViewBag.Section = "Semester";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
