--- a/StudentInternshipManagement/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -7,7 +7,7 @@
                     <span class="badge badge-grey">4</span>
                 </a>
 
-                <ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
+                @*<ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
                     <li class="dropdown-header">
                         <i class="ace-icon fa fa-check"></i>
                         4 Tasks to complete
@@ -75,7 +75,7 @@
                             <i class="ace-icon fa fa-arrow-right"></i>
                         </a>
                     </li>
-                </ul>
+                </ul>*@
             </li>
 
             <li class="purple dropdown-modal">
@@ -91,7 +91,7 @@
                     </li>
 
                     <li class="dropdown-content">
-                        <ul class="dropdown-menu dropdown-navbar navbar-pink">
+                        @*<ul class="dropdown-menu dropdown-navbar navbar-pink">
                             <li>
                                 <a href="#">
                                     <div class="clearfix">
@@ -134,7 +134,7 @@
                                     </div>
                                 </a>
                             </li>
-                        </ul>
+                        </ul>*@
                     </li>
 
                     <li class="dropdown-footer">
@@ -152,7 +152,7 @@
                     <span class="badge badge-success">5</span>
                 </a>
 
-                <ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
+                @*<ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
                     <li class="dropdown-header">
                         <i class="ace-icon fa fa-envelope-o"></i>
                         5 Messages
@@ -253,7 +253,7 @@
                             <i class="ace-icon fa fa-arrow-right"></i>
                         </a>
                     </li>
-                </ul>
+                </ul>*@
             </li>
 
             <li>
