--- a/StudentInternshipManagement/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -43,70 +43,70 @@
         <li class="">
             <a href="/Admin/Department/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Khoa/Viện </span>
+                <span class="menu-text">Faculty/Institute</span>
             </a>
         </li>
 
         <li class="">
             <a href="/Admin/Semester/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Học kỳ </span>
+                <span class="menu-text">Semester</span>
             </a>
         </li>
 
         <li class="">
             <a href="/Admin/Subject/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Môn học </span>
+                <span class="menu-text">Subjects</span>
             </a>
         </li>
 
         <li class="">
             <a href="/Admin/LearningClass/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Lớp học </span>
+                <span class="menu-text">Class</span>
             </a>
         </li>
 
         <li class="">
             <a href="/Admin/Teacher/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Giảng viên </span>
+                <span class="menu-text">Lecturers</span>
             </a>
         </li>
 
         <li class="">
             <a href="/Admin/StudentClass/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Lớp sinh viên </span>
+                <span class="menu-text"> Student class</span>
             </a>
         </li>
 
         <li class="">
             <a href="/Admin/Student/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Sinh viên </span>
+                <span class="menu-text">Student</span>
             </a>
         </li>
 
         <li class="">
             <a href="/Admin/TrainingMajor/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Định hướng thực tập </span>
+                <span class="menu-text">Internship Orientation</span>
             </a>
         </li>
 
         <li class="">
             <a href="/Admin/Company/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Công ty liên kết </span>
+                <span class="menu-text">Associated Company</span>
             </a>
         </li>
 
         <li class="">
             <a href="/Admin/CompanyTrainingMajor/Index">
                 <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Ngành thực tập của công ty </span>
+                <span class="menu-text"> Company internship </span>
             </a>
         </li>
 
@@ -114,7 +114,7 @@
             <a href="#" class="dropdown-toggle">
                 <i class="menu-icon fa fa-desktop"></i>
                 <span class="menu-text">
-                    Quy trình thực tập
+                    Internship Process
                 </span>
 
                 <b class="arrow fa fa-angle-down"></b>
@@ -126,22 +126,19 @@
                 <li class="">
                     <a href="/Admin/Internship/Index">
                         <i class="menu-icon fa fa-caret-right"></i>
-                        Nguyện vọng thực tập
-                    </a>
+                        Desire to practice                     </a>
                 </li>
 
                 <li class="">
                     <a href="/Admin/Group/Index">
                         <i class="menu-icon fa fa-caret-right"></i>
-                        Nhóm thực tập
-                    </a>
+                        Intern group                     </a>
                 </li>
 
                 <li class="">
                     <a href="/Admin/Internship/Grade">
                         <i class="menu-icon fa fa-caret-right"></i>
-                        Kết quả thực tập
-                    </a>
+                        Internship results                     </a>
                 </li>
             </ul>
         </li>
