--- a/StudentInternshipManagement/Areas/Student/Views/Profile/Index.cshtml
+++ b/StudentInternshipManagement/Areas/Student/Views/Profile/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Models.Student
 @{
     ViewBag.Title = "Index";
-    ViewBag.Category = "Hồ sơ";
+    ViewBag.Category = "file";
     ViewBag.Section = "overview &amp; stats";
     Layout = "~/Areas/Student/Views/Shared/_Layout.cshtml";
 }
