--- a/StudentInternshipManagement/Views/Account/ChangePassword.cshtml
+++ b/StudentInternshipManagement/Views/Account/ChangePassword.cshtml
@@ -18,7 +18,7 @@
 
                             <div class="space-6"></div>
                             <p>
-                                Nhập mật khẩu cũ và mật khẩu mới
+                                Enter old password and new password
                             </p>
                             @using (Html.BeginForm("ChangePassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                             {
