--- a/StudentInternshipManagement/Views/Account/ForgotPassword.cshtml
+++ b/StudentInternshipManagement/Views/Account/ForgotPassword.cshtml
@@ -13,12 +13,12 @@
                         <div class="widget-main">
                             <h4 class="header red lighter bigger">
                                 <i class="ace-icon fa fa-key"></i>
-                                Gửi link reset mật khẩu
+                                Send password reset link
                             </h4>
 
                             <div class="space-6"></div>
                             <p>
-                                Nhập email tài khoản
+                                Enter your account email
                             </p>
                             @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post))
                             {
@@ -34,7 +34,7 @@
                                 <div class="clearfix">
                                     <button type="submit" class="width-70 pull-right btn btn-sm btn-danger">
                                         <i class="ace-icon fa fa-lightbulb-o"></i>
-                                        <span class="bigger-110">Gửi link reset mật khẩu!</span>
+                                        <span class="bigger-110">Send password reset link! </span>
                                     </button>
                                 </div>
 
@@ -43,7 +43,7 @@
 
                         <div class="toolbar center">
                             <a href="Login" data-target="#login-box" class="back-to-login-link">
-                                Quay về trang đăng nhập
+                                Back to login page
                                 <i class="ace-icon fa fa-arrow-right"></i>
                             </a>
                         </div>
