--- a/StudentInternshipManagement/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/StudentInternshipManagement/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Quên mật khẩu?";
+    ViewBag.Title = "Forgot password?";
 }
 
 <div class="row">
@@ -17,7 +17,7 @@
 
                         <div class="toolbar center">
                             <a href="/Home/Index" data-target="#login-box" class="back-to-login-link">
-                                Quay về trang chủ
+                                Forgot password?
                                 <i class="ace-icon fa fa-arrow-right"></i>
                             </a>
                         </div>
