--- a/StudentInternshipManagement/Views/Account/Login.cshtml
+++ b/StudentInternshipManagement/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
                             <div class="widget-main">
                                 <h4 class="header blue lighter bigger">
                                     <i class="ace-icon fa fa-coffee green"></i>
-                                    Nhập thông tin đăng nhập
+                                    Enter login information
                                 </h4>
 
                                 <div class="space-6"></div>
@@ -46,7 +46,7 @@
 
                                         <button type="submit" class="width-45 pull-right btn btn-sm btn-primary">
                                             <i class="ace-icon fa fa-key"></i>
-                                            <span class="bigger-110">Đăng nhập</span>
+                                            <span class="bigger-110">Log in</span>
                                         </button>
                                     </div>
 
@@ -57,7 +57,7 @@
 
                                 }
                                 <div class="social-or-login center">
-                                    <span class="bigger-110">@Html.ActionLink("Quên mật khẩu?", "ForgotPassword")</span>
+                                    <span class="bigger-110">@Html.ActionLink("Forgot password?", "ForgotPassword")</span>
                                 </div>
 
                             </div><!-- /.widget-main -->
@@ -66,7 +66,7 @@
                                 <div>
                                     <a href="ForgotPassword" class="forgot-password-link">
                                         <i class="ace-icon fa fa-arrow-left"></i>
-                                        Quên mật khẩu
+                                        Forgot password
                                     </a>
                                 </div>
 
