--- a/StudentInternshipManagement/Views/Account/ResetPassword.cshtml
+++ b/StudentInternshipManagement/Views/Account/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StudentInternshipManagement.Models.ResetPasswordViewModel
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Reset mật khẩu";
+    ViewBag.Title = "Reset password";
 }
 
 <div class="row">
@@ -13,12 +13,12 @@
                         <div class="widget-main">
                             <h4 class="header red lighter bigger">
                                 <i class="ace-icon fa fa-key"></i>
-                                Reset mật khẩu
+                               Reset password
                             </h4>
 
                             <div class="space-6"></div>
                             <p>
-                                Nhập email và mật khẩu mới
+                                Enter new email and password
                             </p>
                             @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                             {
@@ -46,7 +46,7 @@
                                 <div class="clearfix">
                                     <button type="submit" class="width-70 pull-right btn btn-sm btn-danger">
                                         <i class="ace-icon fa fa-lightbulb-o"></i>
-                                        <span class="bigger-110">Reset mật khẩu!</span>
+                                        <span class="bigger-110">Reset password!</span>
                                     </button>
                                 </div>
                             }
@@ -54,7 +54,7 @@
 
                         <div class="toolbar center">
                             <a href="Login" data-target="#login-box" class="back-to-login-link">
-                                Quay về trang đăng nhập
+                                Return to the login page
                                 <i class="ace-icon fa fa-arrow-right"></i>
                             </a>
                         </div>
