--- a/StudentInternshipManagement/Views/Shared/_LoginPartial.cshtml
+++ b/StudentInternshipManagement/Views/Shared/_LoginPartial.cshtml
@@ -28,7 +28,7 @@
             <a data-toggle="dropdown" href="#" class="dropdown-toggle">
                 <img class="nav-user-photo" src='~/@($"Images/avatars/{avatar}")'  alt='@($"{username}'s photo")' />
                 <span class="user-info">
-                    <small>Chào mừng,</small>
+                    <small>Welcome,</small>
                     @username
                 </span>
 
@@ -45,15 +45,14 @@
                 <li>
                     <a href='/Account/ChangePassword'>
                         <i class="ace-icon fa fa-cog"></i>
-                        Đổi mật khẩu
+                        Change Password
                     </a>
                 </li>
                 <li class="divider"></li>
                 <li>
                     <a href="javascript:document.getElementById('logoutForm').submit()">
                         <i class="ace-icon fa fa-power-off"></i>
-                        Đăng xuất
-                    </a>
+                        Log out                    </a>
                 </li>
             </ul>
         </li>
