--- a/StudentInternshipManagement/Areas/Admin/Views/Profile/Edit.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/Profile/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Kendo.Mvc.UI
 @model Models.Admin
 @{
-    ViewBag.Title = "Chỉnh sửa hồ sơ";
-    ViewBag.Category = "Hồ sơ";
-    ViewBag.Section = "Chỉnh sửa";
+    ViewBag.Title = "Edit Profile";
+    ViewBag.Category = "file";
+    ViewBag.Section = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -24,7 +24,7 @@
     <div class="space-4"></div>
 
     <div class="form-group">
-        <label class="col-sm-3 control-label no-padding-right" for="form-field-1"> Ngày sinh </label>
+        <label class="col-sm-3 control-label no-padding-right" for="form-field-1">Date of birth</label>
         <div class="col-sm-9">
             <input type="date" class="col-xs-10 col-sm-5" id="BirthDate" name="BirthDate" value="@Model.BirthDate.ToString("yyyy-MM-dd")">
         </div>
@@ -34,7 +34,7 @@
     <div class="space-4"></div>
 
     <div class="form-group">
-        <label class="col-sm-3 control-label no-padding-right" for="form-field-1"> Địa chỉ </label>
+        <label class="col-sm-3 control-label no-padding-right" for="form-field-1">Address</label>
 
         <div class="col-sm-9">
             <input type="text" class="col-xs-10 col-sm-5" id="Address" name="Address" value="@Model.Address" />
@@ -45,7 +45,7 @@
     <div class="space-4"></div>
 
     <div class="form-group">
-        <label class="col-sm-3 control-label no-padding-right" for="form-field-1"> Điện thoại </label>
+        <label class="col-sm-3 control-label no-padding-right" for="form-field-1">Phone</label>
 
         <div class="col-sm-9">
             <input type="text" class="col-xs-10 col-sm-5" id="Phone" name="Phone" value="@Model.Phone" />
