--- a/StudentInternshipManagement/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/StudentInternshipManagement/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
                     <div id="site-logo">
                         <img src="~/Images/placeholder/logo.jpg" />
                         <div id="site-name">
-                            <h3>Trường Đại học Bách Khoa Hà Nội</h3>
-                            <h4>Trang quản lý thực tập</h4>
+                            <h3>Hanoi University of Science and Technology</h3>
+                            <h4>Internship management page</h4>
                         </div>
                     </div>
                 </a>
