--- a/StudentInternshipManagement/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/StudentInternshipManagement/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Reset mật khẩu";
+    ViewBag.Title = "Reset password";
 }
 
 <div class="row">
@@ -17,7 +17,7 @@
 
                         <div class="toolbar center">
                             <a href="Login" data-target="#login-box" class="back-to-login-link">
-                                Quay về trang đăng nhập
+                                Return to the login page
                                 <i class="ace-icon fa fa-arrow-right"></i>
                             </a>
                         </div>
