--- a/StudentInternshipManagement/Views/News/Index.cshtml
+++ b/StudentInternshipManagement/Views/News/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Kendo.Mvc.UI
 @using Models
 @{
-    ViewBag.Title = "Tin tức";
-    ViewBag.Category = "Tin tức";
-    ViewBag.Section = "Tin tức";
+    ViewBag.Title = "News";
+    ViewBag.Category = "News";
+    ViewBag.Section = "News";
 }
 @Styles.Render("~/Content/kendo/2018.2.516/styles")
 @Scripts.Render("~/Scripts/kendo/2018.2.516/scripts")
