--- a/StudentInternshipManagement/Views/News/View.cshtml
+++ b/StudentInternshipManagement/Views/News/View.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Models.News
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Homepage - Trang quản lý thực tập";
+    ViewBag.Title = "Homepage - Internship management page";
     string message = ViewBag.Message ?? string.Empty;
 }
 
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="page-header">
                 <h1 id="newslist-header">
-                    Tin tức - Thông báo
+                    News - Notice
                 </h1>
             </div>
             <div class="row">
