--- a/StudentInternshipManagement/Views/Shared/_Layout.cshtml
+++ b/StudentInternshipManagement/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
                     <div id="site-logo">
                         <img src="~/Images/placeholder/logo.jpg" />
                         <div id="site-name">
-                            <h3>Trường Đại học Bách Khoa Hà Nội</h3>
-                            <h4>Trang quản lý thực tập</h4>
+                            <h3>Hanoi Polytechnic University</h3>
+                            <h4>Internship management page</h4>
                         </div>
                     </div>
                 </a>
@@ -52,7 +52,7 @@
                 <div class="footer-content">
                     <span class="bigger-120">
                         <span class="blue bolder">Duc Tran</span>
-                        Hệ thống quản lý thực tập &copy; 2013-2014
+                        Internship management system&copy; 2013-2014
                     </span>
 
                     &nbsp; &nbsp;
